[package]
name = "morphy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
regex = "1.9"
serde = { version = "1.0", features = [ "derive" ] }
fancy-regex = { version = "0.11", optional = true}
tokenizers = "0.15.0"

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = ["apt install libssl-dev -y"]
