[package]
name = "morphy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
tokenizers = "0.15.0"
paste = "1.0.14"
csv = { version = "1.3.0", features = [] }
radix-tree = "0.2.0"
lazy_static = "1.4.0"

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = ["apt install libssl-dev -y"]
